--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -4,16 +4,16 @@ android:orientation="horizontal"
 android:layout_width="fill_parent"
 android:layout_height="fill_parent"
     tools:ignore="MissingDefaultResource">
-<FrameLayout
+<androidx.fragment.app.FragmentContainerView
     android:id="@+id/fragment_container1"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_weight="1">
-</FrameLayout>
-<FrameLayout
+</androidx.fragment.app.FragmentContainerView>
+<androidx.fragment.app.FragmentContainerView
     android:id="@+id/fragment_container2"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_weight="1">
-</FrameLayout>
+</androidx.fragment.app.FragmentContainerView>
 </LinearLayout>
